Updated index.html to v1.1

--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   <body>
     <h1>As-salāmu ʿalaykum!</h1>
     <p>If you can read this in your browser, VS Code is set up right.</p>
+    <p>Version 1.1 - added this line!</p>
   </body>
 </html>
